--- a/Soffit/sass/bloks/_contacts.sass
+++ b/Soffit/sass/bloks/_contacts.sass
@@ -4,6 +4,7 @@
     justify-content: center
     align-items: center
     min-height: 50vh
+    margin-bottom: 30%
 
     &__address, 
         // display: flex
@@ -53,8 +54,21 @@
     0 0 80px #000000
     border-radius: 10px    
     transition-delay: 0.01s
+.logo
+    padding-bottom: 5px 
 .mybrend
+    display: inline-flex
+    width: 60px
+    height: 60px
     position: relative
-    float: right 
-    bottom: % 
-    
+    top: 16px
+.mobile
+    display: flex
+    // position: relative
+    // top: 20px 
+.details
+    font-size: 12px 
+    line-height: 1em      
+// .row
+//     display: flex
+//     flex-flow: wrap column    
