--- a/Soffit/sass/style.sass
+++ b/Soffit/sass/style.sass
@@ -16,5 +16,11 @@
 @import 'bloks/_contacts'
 // подключение our_teacher
 @import 'bloks/_our_teacher' 
+// подключение reviews
+@import 'bloks/_reviews'
+// подключение photos
+@import 'bloks/_photos'
+// подключение scenario
+@import 'bloks/_scenario'
 // подключение media
 @import 'media'      
